# tphrase-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT.txt  README.md  Readme.md  copyright
.github/workflows/: test.yml
src/: compile_error.rs  fastrand_randomgenerator.rs  fastrand_rng.rs  generator.rs  lib.rs  parser.rs  random_number_generator.rs  regex_substitutor.rs  substitutor.rs  utils.rs
src/parser/: data.rs
tests/: test_fastrand_rng.rs  test_generate.rs  test_parse.rs  test_readme.rs  test_regex_gsub.rs  test_struct_errors.rs  test_struct_generator.rs  test_struct_syntax.rs  test_utils.rs
tests/utils/: mod.rs
