[package]
name = "tphrase"
version = "1.0.2"
edition = "2015"
description = "A translatable phrase generator."
license = "MIT OR Apache-2.0"
repository = "https://github.com/oo13/tphrase-rs.git"
categories = ["internationalization", "text-processing"]
readme = "README.md"

[features]
default = [ "fastrand", "regex" ]

[dependencies]
fastrand = { version = "2.3.0", optional = true }
regex = { version = "1.11.1", optional = true }
